<resources>
    <string name="app_name">BuildResume</string>
    <string name="sign_in">oogle Sign in</string>
    <string name="easy_way_to_create_your_resume">Easy way to create your resume</string>
    <string name="web_client_id">859830589554-05lstmu177qirp0refpc365lce88uq3g.apps.googleusercontent.com</string>
    <string name="welcome">Welcome!!</string>
    <string name="login_success">\"LOGIN SUCCESSFUL\"</string>
    <string name="check_connection">\"check your connection\"</string>
    <string name="click">Click</string>
    <string name="create_new_resume">Create New Resume</string>
    <string name="username">userName</string>
    <string name="to_add_new_resume">to add new resume</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile">User profile</string>
    <string name="edit_your_form">Edit your resume</string>
    <string name="edit_profile_details">Edit profile Details</string>
    <string name="edit_education_details">Edit Education details</string>
    <string name="edit_project_details">Edit project details</string>
    <string name="edit_skills">Edit skills</string>
    <string name="edit_experience">Edit experience</string>
    <string name="optional_info">Optional Info</string>
    <string name="fill_all_details">Fill all details</string>
    <string name="enter_name">*Enter name :</string>
    <string name="eg_vijay_joseph">eg. - Vijay Joseph</string>
    <string name="enter_mobile_number">*Enter mobile number:</string>
    <string name="eg_91_0011233445">eg: +91 0011233445</string>
    <string name="enter_address">*Enter Address</string>
    <string name="a_p_vimanagar_pune_maharashtra_1234">a/p Vimanagar, Pune Maharashtra, 1234</string>
    <string name="abc123_gmail_com">abc123@gmail.com</string>
    <string name="enter_email">*Enter Email</string>
    <string name="enter_school_name">Enter school name :</string>
    <string name="school_name">School name</string>
    <string name="fill_education_details">Fill education details :</string>
    <string name="enter_diploma_college_name">Enter diploma college name :</string>
    <string name="enter_degree_college_name">Enter Degree college name :</string>
    <string name="empty_data">fields need to filled</string>
    <string name="data_saved">Data saved</string>
    <string name="install_wps_app">Install WPS app</string>
    <string name="select_app">Select app</string>
    <string name="enter_company_name">Enter Company name:</string>
    <string name="eg_abc_company_ltd">eg - abc company LTD</string>
    <string name="enter_year_of_experience_in_company">Enter year of experience in Company:</string>
    <string name="eg_2_years">eg - 2 years</string>
    <string name="enter_total_year_of_experience">Enter total year of experience :</string>
    <string name="eg_5_years">eg - 5 years</string>
    <string name="save_experience_details">Save Experience Details</string>
    <string name="enter_10th_school_name_and_percentage">*Enter 10th School name and percentage:</string>
    <string name="_99_99">99.99</string>
    <string name="enter_12th_school_name_and_percentage">Enter 12th College name and percentage:</string>
    <string name="college_name">College name</string>
    <string name="enter_diploma_college_name_and_percentage">Enter diploma college name and percentage:</string>
    <string name="enter_degree_college_name_and_percentage">*Enter degree college name and percentage :</string>
    <string name="save_profile_details">Save Profile Details</string>
    <string name="enter_project_title">Enter Project Title :</string>
    <string name="eg_project_title">eg. - Project title</string>
    <string name="enter_project_description">Enter project Description :</string>
    <string name="eg_project_description">eg. - Project description.</string>
    <string name="save_project_details">Save Project Details</string>
    <string name="save_skills_details">Save Skills Details</string>
    <string name="eg_web_development_sap">eg - Web development, SAP</string>
    <string name="other_skills">*Other skills</string>
    <string name="eg_android_development_cloud">eg - Android Development, Cloud</string>
    <string name="certification">*Certification :</string>
    <string name="eg_android_studio">eg - Android studio</string>
    <string name="enter_tools_you_are_familiar_of">*Enter tools you are familiar of:</string>
    <string name="eg_java_c_etc">eg - java, C++ etc</string>
    <string name="enter_your_programming_languages">*Enter your programming languages :</string>
    <string name="resume_form">Resume resume</string>
    <string name="download_resume_pdf">Download Resume PDF</string>
    <string name="user_name">User name</string>
    <string name="resume">Resume</string>
    <string name="not_possible">not possible</string>
    <string name="data_updated">Data updated</string>
    <string name="save_pdf">Save PDF</string>
    <string name="remove_project_details">removed project details</string>
    <string name="removed_experience_details">removed experience details</string>
    <string name="fill_details">fill details</string>
    <string name="download_pdf">download PDF</string>
    <string name="download">download</string>
    <string name="sign_out">sign_out</string>
    <string name="generate_pdf">PDF genrated</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="save_education_details">Save Education Details</string>
    <string name="village_city_sub_dist_dist_state_pin_code">village/city, sub-dist, dist, state, pin code</string>
    <string name="_1234567890">1234567890</string>
    <string name="john_carter">John Carter</string>
    <string name="eg_abc">eg. Abc</string>
    <string name="eg_1_year">eg. 1 year</string>
    <string name="eg_4_year">eg. 4 year</string>
    <string name="eg_web_development">eg. Web Development</string>
    <string name="eg_android_app_development">eg. Android App Development</string>
    <string name="eg_java_c">eg. Java, C++</string>
    <string name="describe_your_project_in_short">Describe your project in short</string>
    <string name="project_title">Project Title</string>
    <string name="eg_99_99">eg. 99.99</string>
    <string name="degree_college_name">Degree College Name</string>
    <string name="diploma_college_name">Diploma College Name</string>
    <string name="share">share</string>
    <string name="share_pdf">share_pdf</string>
    <string name="toast_share_pdf">Share PDF</string>
    <string name="select_app_share">Share via</string>
    <string name="profile">Profile</string>
    <string name="education">Education</string>
    <string name="skills">Skills</string>
    <string name="project">Project</string>
    <string name="experience">Experience</string>
    <string name="provider">.provider</string>
    <string name="application_pdf">application/pdf</string>
    <string name="invalid_viewtype_provider">Invalid ViewType Provider</string>
</resources>

